syntax = "proto3";

package proto;

option go_package ="server/proto";

message Log {
  string name = 1;
  string data = 2;
}


message WriteLogRequest { //Message name should be PascalCase
  Log log_entry = 1; // field names should be lower_snake_case
}

message WriteLogResponse {
  string result = 1;
}

service LogService {
  rpc WriteLog(WriteLogRequest) returns (WriteLogResponse);
}

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative log.proto
//
//go mod tidy to find and download unused dep